--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.6",
     "mongoose-unique-validator": "^2.0.3",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "xss-clean": "^0.1.1"
   }
 }
