--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.6",
     "mongoose-unique-validator": "^2.0.3",
+    "mongoose-validator": "^2.1.0",
     "multer": "^1.4.3",
     "xss-clean": "^0.1.1"
   }
