--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.6",
+    "mongoose-errors": "^1.1.2",
     "mongoose-unique-validator": "^2.0.3",
     "mongoose-validator": "^2.1.0",
     "multer": "^1.4.3",
